sf-src/force-app/main/default/objects/Sales_Transaction_Item__c/Sales_Transaction_Item__c.object-meta.xml
<CustomObject>
    <label>売上明細</label>
    <nameField>
        <displayFormat>TXI-{00000000}</displayFormat>
        <label>明細番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>