sf-src/force-app/main/default/objects/Sales_Transaction_Item__c/fields/DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>DiscountAmount__c</fullName>
    <label>割引額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>