sf-src/force-app/main/default/objects/Sales_Transaction_Item__c/fields/FulfillmentStatus__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentStatus__c</fullName>
    <label>出荷ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未出荷</fullName>
            </value>
            <value>
                <fullName>出荷済</fullName>
            </value>
            <value>
                <fullName>fulfilled</fullName>
                <isActive>false</isActive>
                <label>fulfilled</label>
            </value>
            <value>
                <fullName>pending</fullName>
                <isActive>false</isActive>
                <label>pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>