sf-src/force-app/main/default/objects/Sales_Transaction_Item__c/fields/LineAmount__c.field-meta.xml
<CustomField>
    <fullName>LineAmount__c</fullName>
    <label>行金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>