sf-src/force-app/main/default/objects/Sales_Transaction_Item__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <label>商品コード</label>
    <length>100</length>
    <type>Text</type>
</CustomField>