sf-src/force-app/main/default/objects/Sales_Transaction_Item__c/fields/SalesTransaction__c.field-meta.xml
<CustomField>
    <fullName>SalesTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>売上トランザクション</label>
    <referenceTo>Sales_Transaction__c</referenceTo>
    <relationshipLabel>売上明細</relationshipLabel>
    <relationshipName>SalesTransactionItems</relationshipName>
    <type>Lookup</type>
</CustomField>